--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@next/mdx": "^14.1.0",
     "@tailwindcss/typography": "^0.5.10",
     "@types/mdx": "^2.0.10",
+    "framer-motion": "^11.0.3",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
