--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/mdx": "^2.0.10",
     "framer-motion": "^11.0.3",
     "next": "14.1.0",
+    "next-intl": "^3.5.3",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
