--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "react-dom": "^18",
     "react-icons": "^5.0.1",
     "rehype-sanitize": "^6.0.0",
-    "rehype-stringify": "^10.0.0"
+    "rehype-stringify": "^10.0.0",
+    "workbox-core": "^7.0.0",
+    "workbox-precaching": "^7.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
