--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@next/mdx": "^14.1.0",
     "@tailwindcss/typography": "^0.5.10",
     "@types/mdx": "^2.0.10",
+    "@vercel/analytics": "^1.1.2",
+    "@vercel/speed-insights": "^1.0.9",
     "framer-motion": "^11.0.3",
     "next": "14.1.0",
     "next-intl": "^3.5.3",
