--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/mdx": "^2.0.10",
     "@vercel/analytics": "^1.1.2",
     "@vercel/speed-insights": "^1.0.9",
+    "axios": "^1.6.7",
     "framer-motion": "^11.0.3",
     "next": "14.1.0",
     "next-intl": "^3.5.3",
@@ -24,6 +25,7 @@
     "react-icons": "^5.0.1",
     "rehype-sanitize": "^6.0.0",
     "rehype-stringify": "^10.0.0",
+    "resend": "^3.1.0",
     "workbox-core": "^7.0.0",
     "workbox-precaching": "^7.0.0"
   },
